syntax = "proto3";
package verana.dd.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "verana/dd/v1/params.proto";

option go_package = "github.com/verana-labs/verana/x/diddirectory/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc AddDID(MsgAddDID) returns (MsgAddDIDResponse);
  rpc RenewDID(MsgRenewDID) returns (MsgRenewDIDResponse);
  rpc RemoveDID(MsgRemoveDID) returns (MsgRemoveDIDResponse);
  rpc TouchDID(MsgTouchDID) returns (MsgTouchDIDResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "verana/x/diddirectory/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}


// MsgAddDID defines the Msg/AddDID request type
message MsgAddDID {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string did = 2;
  uint32 years = 3;
}

// MsgAddDIDResponse defines the Msg/AddDID response type
message MsgAddDIDResponse {}

// MsgRenewDID defines the Msg/RenewDID request type
message MsgRenewDID {
  option (cosmos.msg.v1.signer) = "creator";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string did = 2;
  uint32 years = 3;
}

// MsgRenewDIDResponse defines the Msg/RenewDID response type
message MsgRenewDIDResponse {}

// MsgRemoveDID defines the Msg/RemoveDID request type
message MsgRemoveDID {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string did = 2;
}

// MsgRemoveDIDResponse defines the Msg/RemoveDID response type
message MsgRemoveDIDResponse {}

// MsgTouchDID defines the Msg/TouchDID request type
message MsgTouchDID {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string did = 2;
}

// MsgTouchDIDResponse defines the Msg/TouchDID response type
message MsgTouchDIDResponse {}